--- a/WareHouseNJsound/appsettings.json
+++ b/WareHouseNJsound/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "WarehouseAndStockConnection": "Server=LAPTOP-5B58GC9Q;Database=WarehouseAndStock;Trusted_Connection=True;"
+        "WarehouseAndStockConnection": "Server=LAPTOP-V7MR36EV;Database=WarehouseAndStock;Trusted_Connection=True;"
     }
 }
